@@ -12,7 +12,6 @@ sbin_PROGRAMS = bmc-watchdog
 
 bmc_watchdog_LDADD = \
 	$(top_builddir)/common/src/libtoolcommon.la \
-	$(top_builddir)/common/src/libfreeipmiportability.la \
 	$(top_builddir)/common/src/libdebugcommon.la \
 	$(top_builddir)/libfreeipmi/src/libfreeipmi.la
 
@@ -21,9 +20,6 @@ bmc_watchdog_SOURCES = \
 	bmc-watchdog-argp.c
 
 $(top_builddir)/common/src/libtoolcommon.la : force-dependency-check
-	@cd `dirname $@` && make `basename $@`
-
-$(top_builddir)/common/src/libfreeipmiportability.la : force-dependency-check
 	@cd `dirname $@` && make `basename $@`
 
 $(top_builddir)/common/src/libdebugcommon.la : force-dependency-check
