@@ -15,7 +15,6 @@ sbin_PROGRAMS = ipmi-fru
 
 ipmi_fru_LDADD = \
 	$(top_builddir)/common/src/libtoolcommon.la \
-	$(top_builddir)/common/src/libfreeipmiportability.la \
 	$(top_builddir)/ipmidetect/src/libipmidetect/libipmidetect.la \
 	$(top_builddir)/libfreeipmi/src/libfreeipmi.la
 
@@ -27,9 +26,6 @@ ipmi_fru_SOURCES = \
 	ipmi-fru-util.c
 
 $(top_builddir)/common/src/libtoolcommon.la : force-dependency-check
-	@cd `dirname $@` && make `basename $@`
-
-$(top_builddir)/common/src/libfreeipmiportability.la : force-dependency-check
 	@cd `dirname $@` && make `basename $@`
 
 $(top_builddir)/ipmidetect/src/libipmidetect/libipmidetect.la : force-dependency-check
