@@ -27,7 +27,6 @@ ipmipower_CPPFLAGS = \
 
 ipmipower_LDADD = \
 	$(top_builddir)/common/src/libtoolcommon.la \
-	$(top_builddir)/common/src/libfreeipmiportability.la \
 	$(top_builddir)/common/src/libdebugcommon.la \
 	$(top_builddir)/ipmidetect/src/libipmidetect/libipmidetect.la \
 	$(top_builddir)/libfreeipmi/src/libfreeipmi.la
@@ -49,9 +48,6 @@ ipmipower_SOURCES = \
 	wrappers.c
  
 $(top_builddir)/common/src/libtoolcommon.la : force-dependency-check
-	@cd `dirname $@` && make `basename $@`
-
-$(top_builddir)/common/src/libfreeipmiportability.la : force-dependency-check
 	@cd `dirname $@` && make `basename $@`
 
 $(top_builddir)/common/src/libdebugcommon.la : force-dependency-check
